prep for rickshaw api
